--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,17 @@ name: Paul'Blog
 description: 纪录Paul的生活
 meta_description: "2015，新的开始，新的生活"
 
-markdown: redcarpet
-highlighter: pygments
+markdown: kramdown
+highlighter: rouge
 permalink: /:title.html
 logo: false
+comments: true
 paginate: 15
 baseurl: /p
 domain_name: 'http://paulreina.com'
+url: 'http://paulreina.com/p'
 google_analytics: 'UA-XXXXXXXX-X'
 
 # Details for the RSS feed generator
-url:            'http://paulreina.com/p/'
+url:            'http://paulreina.github.io/'
 author:         'Paul chan'
